feat: adding settings
